--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-
+MONGO_DB=mongodb+srv://rpbarmaiya:pWVsgzcNnzK5lCLa@cluster0.bxawwhy.mongodb.net/?retryWrites=true&w=majority
+PORT=80
+SERVERURL=http://localhost
+SMPT_MAIL=rpbarmaiya@gmail.com
+SMPT_PASS=gdxtsjkugesvprxx
+JWT_KEY=somekey
 
 
 
@@ -9,5 +14,3 @@ gdxtsjkugesvprxx
 
 pWVsgzcNnzK5lCLa
 rpbarmaiya
-
-mongodb+srv://rpbarmaiya:pWVsgzcNnzK5lCLa@cluster0.bxawwhy.mongodb.net/?retryWrites=true&w=majority
